--- a/carousel.css
+++ b/carousel.css
@@ -442,3 +442,70 @@
     width: 100vw;
     height: auto;
 }
+
+.about {
+    color: rebeccapurple;
+    margin: 50px 75px;
+}
+
+.flex1 {
+    display: flex;
+    top: 0;
+    z-index: 1000;
+    justify-content: space-around;
+    margin: 0 150px;
+}
+
+.flex1 h1 {
+    margin-right: 20px;
+    font-size: 75px;
+    font-weight: bold;
+    text-align: justify;
+}
+
+.flex1 p {
+    margin-right: 20px;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: justify;
+    max-width: 500px;
+}
+
+.flex1 img {
+    max-width: 350px;
+    height: auto;
+    border-radius: 20px;
+}
+
+.flex2 {
+    display: flex;
+    top: 0;
+    z-index: 1000;
+    justify-content: space-around;
+    margin: 0 150px;
+}
+
+.h2 {
+    margin-top: 100px;
+    order: 1;
+}
+
+.flex2 h1 {
+    margin-right: 20px;
+    font-size: 75px;
+    font-weight: bold;
+    text-align: justify;
+}
+
+.flex2 p {
+    margin-right: 20px;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: justify;
+    max-width: 500px;
+}
+
+.flex2 img {
+    max-width: 450px;
+    height: auto;
+}
